--- a/packages/toolkit/components/card/card.scss
+++ b/packages/toolkit/components/card/card.scss
@@ -85,8 +85,8 @@ $card-border-hover-color: $ofh-color-greyscale-4;
 
 .ofh-card__icon {
   color: $ofh-color-foreground-feedback-success-2;
-  height: 34px;
-  width: 34px;
+  height: 32px;
+  width: 32px;
 }
 
 /* Clickable card
