--- a/packages/toolkit/components/do-dont-list/_do-dont-list.scss
+++ b/packages/toolkit/components/do-dont-list/_do-dont-list.scss
@@ -19,17 +19,14 @@
 }
 
 .ofh-do-dont-list__label {
-  @include heading-label(
-    $ofh-color-brand-yellow-3-main,
-    $ofh-color-greyscale-white
-  ); /* [2] */
+  @include heading-label($ofh-color-brand-yellow-3-main, $ofh-color-greyscale-white); /* [2] */
 
   @include print-color($ofh-color-brand-blue-navy-3-main);
 }
 
 .ofh-do-dont-list__icon {
-  height: 34px;
-  width: 34px;
+  height: 32px;
+  width: 32px;
 }
 
 .ofh-do-dont-list__icon--tick {
